# quadruped-sim

devel/: .catkin  setup.sh
devel/lib/go1_app/: gazebo_go1_ctrl  go1_app
devel/lib/go1_ctrl/: go1_ctrl
devel/lib/pkgconfig/: go1_app.pc  go1_ctrl.pc  go1_description.pc  go1_gazebo.pc  unitree_gazebo.pc  unitree_legged_control.pc  unitree_legged_msgs.pc
devel/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
devel/share/go1_app/cmake/: go1_appConfig.cmake
devel/share/go1_ctrl/cmake/: go1_ctrlConfig.cmake
devel/share/go1_description/cmake/: go1_descriptionConfig.cmake
devel/share/go1_gazebo/cmake/: go1_gazeboConfig.cmake
devel/share/roseus/ros/unitree_legged_msgs/: manifest.l
devel/share/unitree_gazebo/cmake/: unitree_gazeboConfig.cmake
devel/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
src/go1_app/: CMakeLists.txt
src/go1_app/src/: Go1Controller.cpp  Go1Controller.h  Go1CtrlState.h  Go1Params.h  LegKinematics.h  RosInterface.cpp  RosInterface.h  main.cpp
src/go1_ctrl/: CMakeLists.txt
src/go1_ctrl/src/common/: cppTypes.h
src/go1_ctrl/src/common/ControlParameters/: ControlParameters.cpp  ControlParameters.h
src/go1_ctrl/src/common/Controllers/: FootSwingTrajectory.cpp  FootSwingTrajectory.h  GaitScheduler.cpp  GaitScheduler.h
src/go1_ctrl/src/common/Dynamics/: FloatingBaseModel.h  Quadruped.h
src/go1_ctrl/src/common/Math/: Interpolation.h
src/go1_ctrl/src/common/Utilities/: PeriodicTask.cpp  utilities.h
src/go1_ctrl/src/robot/: RobotController.h  RobotRunner.cpp  RobotRunner.h  SimulationBridge.cpp  SimulationBridge.h  main_app.cpp  main_app.h
src/go1_ctrl/src/user/: main.cpp  unitree_Controller.cpp  unitree_Controller.h  unitree_UserParameters.h
src/go1_ctrl/src/user/FSM_States/: ControlFSM.h  ControlFSMData.h  FSM_State.h
src/go1_gazebo/: CMakeLists.txt
src/go1_gazebo/launch/: normal.launch
src/robot/go1_description/xacro/: gazebo.xacro
